Fixed loading icon not being vertically centered on mobile safari, input text now has top/bottom padding instead of line-height which fixes text input blinking line from being missaligned

--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,16 @@ h1{
     margin: 0;
     font-size: 2em;
     padding-left: 0.5em;
-    line-height: 2em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     border-radius: 0;
 }
 
 .loading-icon{
     position: absolute;
-    height: 2.5em;
-    top: 0.9em;
+    height: 100%;
+    padding-top: 1em;
+    padding-bottom: 1em;
     right: 1em;
 }
 
